--- a/about-me.html
+++ b/about-me.html
@@ -41,54 +41,52 @@
       </section>
       <section class="about-me-paragraphs">
         <p>
-          Growing up, I have always been captivated with creating projects with
-          my hands. Puzzles, K'nex building sets, and the like caught my
-          attention. I would spend hours working patiently and with a detailed
-          eye place the pieces together. Puzzles are still one of my favorites
-          pastimes, where I'm able to listen to enticing albums and podcasts
-          while at work.
+          Growing up, I have always been captivated by creating projects with my
+          hands. Puzzles, K'nex building sets, and the like caught my attention.
+          I would spend hours working patiently with a detailed eye to placing
+          the pieces together. Puzzles are still one of my favorite pastimes,
+          where I can listen to enticing albums and podcasts while at work.
         </p>
         <p>
-          I discovered the Software Developer career path in high school where
-          it fascinated the creative part of my brain and thus pursued and
-          achieved a Bachelor of Science C.S. degree from the University of
-          North Carolina in 2022. During my undergraduate career, I learned that
-          time is very precious and to use it wisely between my peers, family,
-          friends, and myself. When building my development skills, I had to
-          learn them quickly to be active in my contributions on group projects
-          and finishing class assignments on time.
+          I discovered the Software Developer career path in high school, which
+          fascinated both the logical and creative parts of my brain and thus
+          pursued and achieved a Bachelor of Science C.S. degree from the
+          University of North Carolina in 2022. During my undergraduate career,
+          I learned that time is very precious and to use it wisely between my
+          peers, family, friends, and myself. Quickly learning my development
+          skills made me an active contributor to group projects and finish
+          class assignments on time.
         </p>
         <p>
           One of my favorite projects is a Rocket League Statistics web
-          application which complied data from professional and collegiate
-          Rocket League matches using the ballchasing API and complied them into
-          a readable table for users to search their favorite players and teams
-          and compare various statistics. We were able to authenticate users and
-          allow them to favorite players and teams and pool them into a list.
-          Player and teams also had pop-up info cards that held their
-          nationality and team history.
+          application that leveraged the ballchasing API to compile data from
+          both professional and collegiate Rocket League matches into a dynamic,
+          searchable table for users to search for their favorite players and
+          teams and compare various statistics. We added user authentication and
+          the option for them to favorite players and teams and pool them into a
+          personalized list. Players and teams also had pop-up info cards that
+          held their nationality and team history.
         </p>
         <p>
-          Another project that I thoroughly enjoyed was Ancient Path Adventures
-          (APA) where my team and I created a web application for their game,
-          Promised Land Journey. We developed a platform where APA were able to
-          create their own modules directly related to the game and stored them
-          in a database. These modules consisted of quizzes, videos, and
-          readings. Teachers were allowed to use these example modules or make
-          their own after paying a subscription to use APA's services. Students
-          could join classes thorugh a unique access code that was randomly
-          generated upon class created.
+          Another project that I enjoyed was a web application for Promised Land
+          Journey, a game developed by Ancient Path Adventures (APA). We
+          developed a platform where APA could create modules stored in a
+          database. These modules consisted of quizzes, videos, and readings.
+          Teachers were allowed to use these example modules or make their own
+          after paying a subscription to use APA's services. Upon class
+          creation, teachers could give out their unique, randomly generated
+          access code for students to join their classes and take the modules.
         </p>
         <p>
           Outside of my technical skills, I enjoy dabbling in other creative
-          aspects. Being a former percussionist, I try to maintain and grow my
+          avenues. Being a former percussionist, I try to maintain and grow my
           playing skills by performing with the nearby church or some rudimental
-          drumming. I've also been trying to develop my ear and do some
-          composition on the side. Cooking helps me connect with my Vietnamese
-          heritage and is something that I want to share with my friends and
-          future family. The newest of the them is 3D rendering, where I've
-          followed the Blender Guru's tutorial on a donut animation and I plan
-          on bringing places I've been into the digital world.
+          drumming. I've also been developing my listening and composition
+          skills on the side. Cooking helps me connect with my Vietnamese
+          heritage and is something I want to share with my friends and future
+          family. The newest of my hobbies is 3D rendering, where I've followed
+          the Blender Guru's tutorial on a donut animation and plan on bringing
+          places I've been into the digital world.
         </p>
       </section>
     </main>
