--- a/about-me.html
+++ b/about-me.html
@@ -50,7 +50,7 @@
         <p>
           I discovered the Software Developer career path in high school, which
           fascinated both the logical and creative parts of my brain and thus
-          pursued and achieved a Bachelor of Science C.S. degree from the
+          pursued and achieved a B.S. Computer Science degree from the
           University of North Carolina in 2022. During my undergraduate career,
           I learned that time is very precious and to use it wisely between my
           peers, family, friends, and myself. Quickly learning my development
