--- a/about-me.html
+++ b/about-me.html
@@ -41,29 +41,28 @@
       </section>
       <section class="about-me-paragraphs">
         <p>
-          Growing up, I have always been captivated by creating projects with my
+          Growing up, I was always captivated by creating projects with my
           hands. Puzzles, K'nex building sets, and the like caught my attention.
-          I would spend hours working patiently with a detailed eye to placing
-          the pieces together. Puzzles are still one of my favorite pastimes,
-          where I can listen to enticing albums and podcasts while at work.
+          I would spend hours working with a detailed eye placing pieces
+          together. Puzzles are still one of my favorite pastimes, where I can
+          listen to enticing albums or podcasts while at work.
         </p>
         <p>
-          I discovered the Software Developer career path in high school, which
-          fascinated both the logical and creative parts of my brain and thus
-          pursued and achieved a B.S. Computer Science degree from the
-          University of North Carolina in 2022. During my undergraduate career,
-          I learned that time is very precious and to use it wisely between my
-          peers, family, friends, and myself. Quickly learning my development
-          skills made me an active contributor to group projects and finish
-          class assignments on time.
+          I discovered software development in high school where it fascinated
+          my logical and creative sides. Thus I pursued and achieved a B.S.
+          Computer Science degree from the University of North Carolina in 2022.
+          During my undergraduate career, I learned that time is very precious
+          and to use it between my peers, family, friends, and myself. Quickly
+          learning my development skills allowed to me an active contributor to
+          group projects.
         </p>
         <p>
-          One of my favorite projects is a Rocket League Statistics web
-          application that leveraged the ballchasing API to compile data from
-          both professional and collegiate Rocket League matches into a dynamic,
-          searchable table for users to search for their favorite players and
-          teams and compare various statistics. We added user authentication and
-          the option for them to favorite players and teams and pool them into a
+          One of my favorite projects was Rocket League Statistics. My team and
+          I leveraged the ballchasing API to compile data from both professional
+          and collegiate Rocket League matches into a table. Users were able to
+          search the dynamic table for their favorite players and teams to
+          compare various statistics. We added user authentication and the
+          option for them to favorite players and teams and pool them into a
           personalized list. Players and teams also had pop-up info cards that
           held their nationality and team history.
         </p>
@@ -71,22 +70,23 @@
           Another project that I enjoyed was a web application for Promised Land
           Journey, a game developed by Ancient Path Adventures (APA). We
           developed a platform where APA could create modules stored in a
-          database. These modules consisted of quizzes, videos, and readings.
-          Teachers were allowed to use these example modules or make their own
-          after paying a subscription to use APA's services. Upon class
-          creation, teachers could give out their unique, randomly generated
-          access code for students to join their classes and take the modules.
+          database. These example modules consisted of quizzes, videos, and
+          readings. After paying subscription to use APA's services, teachers
+          could use these modules or they wanted make their own. Teachers could
+          then set up classes and assigned the modules for students to take.
+          Students could then join the classes through randomly generated access
+          codes.
         </p>
         <p>
           Outside of my technical skills, I enjoy dabbling in other creative
-          avenues. Being a former percussionist, I try to maintain and grow my
-          playing skills by performing with the nearby church or some rudimental
-          drumming. I've also been developing my listening and composition
-          skills on the side. Cooking helps me connect with my Vietnamese
-          heritage and is something I want to share with my friends and future
-          family. The newest of my hobbies is 3D rendering, where I've followed
-          the Blender Guru's tutorial on a donut animation and plan on bringing
-          places I've been into the digital world.
+          avenues. Being a former percussionist, I maintain and grow my musical
+          skills with drumming and playing handbells with the nearby church.
+          I've also been developing my listening and composition skills on the
+          side. Cooking helps me connect with my Vietnamese heritage and is
+          something I want to share with my friends and future family. The
+          newest of my hobbies is 3D rendering, where I've followed the Blender
+          Guru's tutorial on a donut animation and plan on bringing places I've
+          been into the digital world.
         </p>
       </section>
     </main>
