--- a/resume.html
+++ b/resume.html
@@ -130,6 +130,11 @@
           </ul>
         </div>
       </section>
+      <div id="download-resume">
+        <a href="files/AlexanderHoResume.pdf" class="btn border" target="_blank"
+          >Download</a
+        >
+      </div>
     </main>
 
     <footer>
