Updated List of Projects

--- a/projects.html
+++ b/projects.html
@@ -24,22 +24,55 @@
     <main>
       <section id="projects-info">
         <div class="container">
-          <section id="projects-upcoming" class="projects upcoming">
-            <h1>Upcoming Projects</h1>
-            <ul>
-              <li>Lobster and Tofu Website</li>
-              <li>Musical Soundtracks</li>
-              <li>Vietnamese Translator</li>
-              <li>Headline Generator for Rocket League Players</li>
-              <li>Cooking Recipes Generator</li>
-              <li>Map of Places I've Traveled To</li>
-              <li>100 "_____" Generator</li>
-              <li>Boba Training Game</li>
-            </ul>
-          </section>
           <section id="projects-past" class="projects past">
             <h1>Past Projects</h1>
-            <section id="3d-projects">
+            <div class="project-item">
+              <h2>React/Angular Task Tracker</h2>
+              <p>
+                Task Tracker developed in both React and Angular based on
+                Traversy Media's tutorial
+              </p>
+            </div>
+            <div class="project-item">
+              <h2>Guess the Country</h2>
+              <p>
+                Fill in the blank of what country the flag is. Used
+                RestCountries API for list of countries.
+              </p>
+            </div>
+            <div class="project-item">
+              <h2>Boba Counter</h2>
+              <p>Count how many boba scoops you have scooped in a day.</p>
+            </div>
+            <div class="project-item">
+              <h2>Image Resizer</h2>
+              <p>
+                Desktop app to resize your images. Tutorial by Traversy Media
+              </p>
+            </div>
+            <div class="project-item">
+              <h2>Breakout</h2>
+              <p>Simple Javscript Breakout game based on Mozilla's tutorial.</p>
+            </div>
+            <div class="project-item">
+              <h2>Netflix Landing Clone</h2>
+              <p>
+                Clone of the Netflix landing page, tutorial by Traversy Media
+              </p>
+            </div>
+            <div class="project-item">
+              <h2>Random Joke Generator</h2>
+              <p>Generate a random joke from an API</p>
+            </div>
+            <div class="project-item">
+              <h2>Chrome Extension</h2>
+              <p>Save links to any website you visit.</p>
+            </div>
+            <div class="project-item">
+              <h2>CSS Art</h2>
+              <p>Playing around with CSS</p>
+            </div>
+            <div id="3d-projects">
               <h2>3D Donut Render on Blender</h2>
               <p>
                 My version of a 3D Donut from the
@@ -57,7 +90,20 @@
                   type="video/MP4"
                 />
               </video>
-            </section>
+            </div>
+          </section>
+          <section id="projects-upcoming" class="projects upcoming">
+            <h1>Upcoming Projects</h1>
+            <ul>
+              <li>Lobster and Tofu Website</li>
+              <li>Musical Soundtracks</li>
+              <li>Vietnamese Translator</li>
+              <li>Headline Generator for Rocket League Players</li>
+              <li>Cooking Recipes Generator</li>
+              <li>Map of Places I've Traveled To</li>
+              <li>100 "_____" Generator</li>
+              <li>Boba Training Game</li>
+            </ul>
           </section>
         </div>
       </section>
