--- a/projects.html
+++ b/projects.html
@@ -27,21 +27,39 @@
           <section id="projects-past" class="projects past">
             <h1>Past Projects</h1>
             <div class="project-item">
-              <h2>React/Angular Task Tracker</h2>
+              <h2>
+                <a
+                  href="https://main--ubiquitous-kitsune-15d1b7.netlify.app/"
+                  target="_blank"
+                  >React/Angular Task Tracker</a
+                >
+              </h2>
               <p>
                 Task Tracker developed in both React and Angular based on
                 Traversy Media's tutorial
               </p>
             </div>
             <div class="project-item">
-              <h2>Guess the Country</h2>
+              <h2>
+                <a
+                  href="https://timely-chebakia-c81e3f.netlify.app/"
+                  target="_blank"
+                  >Guess the Country</a
+                >
+              </h2>
               <p>
                 Fill in the blank of what country the flag is. Used
                 RestCountries API for list of countries.
               </p>
             </div>
             <div class="project-item">
-              <h2>Boba Counter</h2>
+              <h2>
+                <a
+                  href="https://roaring-rugelach-3c14e6.netlify.app/"
+                  target="_blank"
+                  >Boba Counter</a
+                >
+              </h2>
               <p>Count how many boba scoops you have scooped in a day.</p>
             </div>
             <div class="project-item">
