--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,13 @@
               </p>
             </div>
             <div class="project-item">
-              <h2>Breakout</h2>
+              <h2>
+                <a
+                  href="https://benevolent-kleicha-e081fe.netlify.app/"
+                  target="_blank"
+                  >Breakout</a
+                >
+              </h2>
               <p>Simple Javscript Breakout game based on Mozilla's tutorial.</p>
             </div>
             <div class="project-item">
